# dsstne

./: .gitignore
.github/workflows/: makefile.yml
docs/: ARCHITECTURE.md  DEEP_INTEGRATION_PLAN.md  TESTING.md  torch_nn_parity.md
docs/getting_started/: CDL.txt  DDL.txt  LDL.txt  setup.md  userguide.md
src/amazon/dsstne/engine/: NNLayer.cpp  NNNetwork.cpp  kActivation.cu  kDelta.cu  kernels.h
src/amazon/dsstne/utils/: cdl.cpp
tst/gputests/: CMakeLists.txt  TestDune.cpp  TestNNLayerBackward.cpp  TestNNLayerForward.cpp  TestNNNetworkCheckpoints.cpp  TestNNNetworkInference.cpp  TestNNNetworkTraining.cpp  TestNNWeightInit.cpp  TestNNWeightUpdate.cpp
tst/unittests/: TestCDLParser.cpp  TestDataTypes.cpp  TestNetCDFhelper.cpp  TestUtils.cpp  main.cpp
